--- a/src/app/baby-tracking/pages/dashboard/content/sleep-tracking/sleep-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/sleep-tracking/sleep-tracking.component.html
@@ -1,16 +1,25 @@
-<div class="container">
-  <div class="header">
-    <ion-icon routerLink="../" class="arrow-left" name="chevron-back-outline"></ion-icon>
-    <div>Add Sleep</div>
-  </div>
+<div class="sleeping-container">
+  <ion-row class="header">
+    <ion-col class="flex justify-start items-center" size="3"> <ion-icon class="back-icon" routerLink="toolbar/tracking/dashboard" name="chevron-back-outline"></ion-icon></ion-col>
+    <ion-col class="flex justify-start items-center" size="6"> <span class="header-text">Add Sleep</span></ion-col>
+    <ion-col class="flex justify-start items-center" size="3">
+      @if (state == 2) {
+        <div class="save">
+          <ion-row>
+            <ion-button (click)="save()"> Save </ion-button>
+          </ion-row>
+        </div>
+      }
+    </ion-col>
+  </ion-row>
   <hr />
-  <div>
+  <div class="inner-container">
     <ion-row class="sleep-time">
       <ion-button id="startDate" (click)="presentStartPopover($event)">
-        <ion-col> Start time: </ion-col>
+        <ion-col> <span class="header-text"> Start time: </span> </ion-col>
         @if (!startDate) {
           <ion-col>
-            <u>Set time</u>
+            <u class="header-text">Set time</u>
           </ion-col>
         }
         @if (startDate) {
@@ -28,10 +37,10 @@
     </ion-row>
     <ion-row class="sleep-time">
       <ion-button id="endDate" (click)="presentEndPopover($event)">
-        <ion-col> End Time: </ion-col>
+        <ion-col> <span class="header-text"> End Time: </span></ion-col>
         @if (!endDate) {
           <ion-col>
-            <u>Set time</u>
+            <u class="header-text">Set time</u>
           </ion-col>
         }
         @if (endDate) {
@@ -54,8 +63,8 @@
       </ion-popover>
     </ion-row>
     @if (seconds || minutes || hours) {
-      <ion-row class="timer sleep-time">
-        <div class="times">
+      <ion-row class="timer-container">
+        <div class="time">
           <p>{{ formattedTime }}</p>
         </div>
       </ion-row>
@@ -64,19 +73,14 @@
       <app-circular-button (buttonClicked)="checkTimer($event)" [stateChange]="state"></app-circular-button>
     </ion-row>
     @if (state === 2) {
-      <ion-row>
-        <ion-col (click)="reset()" class="sleep-time">Reset</ion-col>
-        <ion-col class="sleep-time" (click)="addDetails()">Details</ion-col>
+      <ion-row class="sleep-details-container">
+        <ion-col (click)="reset()">
+          <ion-button fill="outline"> Reset </ion-button>
+        </ion-col>
+        <ion-col (click)="addDetails()">
+          <ion-button fill="outline"> Details </ion-button>
+        </ion-col>
       </ion-row>
     }
   </div>
-  @if (state === 2) {
-    <div class="save">
-      <div class="save-inner-container">
-        <ion-row class="sleep-time">
-          <ion-button (click)="saveSleep()"> Save </ion-button>
-        </ion-row>
-      </div>
-    </div>
-  }
 </div>
