--- a/src/app/baby-tracking/pages/dashboard/content/tracking-dashboard/tracking-dashboard.component.scss
+++ b/src/app/baby-tracking/pages/dashboard/content/tracking-dashboard/tracking-dashboard.component.scss
@@ -20,7 +20,8 @@
     .icon-container {
       display: flex;
       ion-icon {
-        font-size: 55px;
+        padding: 5px;
+        font-size: 40px;
       }
     }
 
