--- a/src/app/baby-tracking/pages/dashboard/content/food-tracking/food-tracking.component.html
+++ b/src/app/baby-tracking/pages/dashboard/content/food-tracking/food-tracking.component.html
@@ -1,12 +1,21 @@
-<div class="container">
-  <div class="header">
-    <ion-icon routerLink="../" class="arrow-left" name="chevron-back-outline"></ion-icon>
-    <div>Add Feeding</div>
-  </div>
+<div class="food-tracking-container">
+  <ion-row class="header">
+    <ion-col class="flex justify-start items-center" size="3"> <ion-icon class="back-icon" routerLink="toolbar/tracking/dashboard" name="chevron-back-outline"></ion-icon></ion-col>
+    <ion-col class="flex justify-start items-center" size="6"> <span class="header-text">Add Feeding</span></ion-col>
+    <ion-col class="flex justify-start items-center" size="3">
+      @if (state == 2 || foodTrackingFormValid) {
+        <div class="save">
+          <ion-row>
+            <ion-button (click)="save()"> Save </ion-button>
+          </ion-row>
+        </div>
+      }
+    </ion-col>
+  </ion-row>
   <hr />
-  <div>
+  <div class="inner-container">
     <ion-toolbar>
-      <ion-segment value="all" (ionChange)="segmentChanged($event)">
+      <ion-segment value="nursing" (ionChange)="segmentChanged($event)">
         <ion-segment-button value="nursing">
           <ion-label>Nursing</ion-label>
         </ion-segment-button>
@@ -15,12 +24,12 @@
         </ion-segment-button>
       </ion-segment>
     </ion-toolbar>
-    <ion-row class="sleep-time">
+    <ion-row class="food-time">
       <ion-button id="startDate">
-        <ion-col> Start time: </ion-col>
+        <ion-col> <span class="header-text"> Start time: </span> </ion-col>
         @if (!startDate) {
           <ion-col>
-            <u>Set time</u>
+            <u class="header-text">Set time</u>
           </ion-col>
         }
         @if (startDate) {
@@ -29,18 +38,19 @@
           </ion-col>
         }
       </ion-button>
-      <ion-popover trigger="startDate" size="cover">
+      <ion-popover #startTimePopover trigger="startDate" size="cover">
         <ng-template>
           <ion-datetime [(ngModel)]="startDate" displayFormat="MMM DD, YYYY HH:mm" pickerFormat="MMM DD, YYYY HH:mm" presentation="time" locale="sl-SI"></ion-datetime>
+          <ion-button (click)="dismissStartTimePopover()">OK</ion-button>
         </ng-template>
       </ion-popover>
     </ion-row>
-    <ion-row class="sleep-time">
+    <ion-row class="food-time">
       <ion-button id="endDate">
-        <ion-col> End Time: </ion-col>
+        <ion-col> <span class="header-text"> End Time: </span></ion-col>
         @if (!endDate) {
           <ion-col>
-            <u>Set time</u>
+            <u class="header-text">Set time</u>
           </ion-col>
         }
         @if (endDate) {
@@ -49,7 +59,7 @@
           </ion-col>
         }
       </ion-button>
-      <ion-popover trigger="endDate" size="cover">
+      <ion-popover #endTimePopover trigger="endDate" size="cover">
         <ng-template>
           <ion-datetime
             [(ngModel)]="endDate"
@@ -58,48 +68,45 @@
             presentation="time"
             locale="sl-SI"
             (ngModelChange)="manualTimeEntry()"></ion-datetime>
+          <ion-button (click)="dismissEndTimePopover()">OK</ion-button>
         </ng-template>
       </ion-popover>
     </ion-row>
     @if (selectedSegment === 'nursing') {
       @if (seconds || minutes || hours) {
-        <ion-row class="timer sleep-time">
-          <div class="times">
+        <ion-row class="timer-container">
+          <div class="time">
             <p>{{ formattedTime }}</p>
           </div>
         </ion-row>
       }
-      <ion-row class="sleep-button-row">
+      <ion-row class="tracking-button-row">
         <app-circular-button (buttonClicked)="checkTimer($event)" [stateChange]="state"></app-circular-button>
       </ion-row>
       @if (state === 2) {
-        <ion-row>
-          <ion-col (click)="reset()" class="sleep-time">Reset</ion-col>
+        <ion-row class="reset-container">
+          <ion-col (click)="reset()">
+            <ion-button fill="outline"> Reset </ion-button>
+          </ion-col>
         </ion-row>
       }
     }
     @if (selectedSegment === 'bottle') {
-      <Form [formGroup]="foodForm">
+      <form class="form-container" [formGroup]="foodForm">
         <ion-list>
           <ion-item>
-            <ion-select interface="popover" placeholder="Select Type" formControlName="foodType">
+            <ion-label slot="start"> Food Type: </ion-label>
+            <ion-select slot="end" interface="popover" formControlName="foodType">
               @for (food of foodTypes; track food) {
                 <ion-select-option [value]="food" value="apples">{{ food }}</ion-select-option>
               }
             </ion-select>
           </ion-item>
         </ion-list>
-        <ion-row class="input-row">
-          <ion-input type="text" placeholder="Notes" formControlName="notes"> </ion-input>
+        <ion-row class="notes-container">
+          <ion-textarea placeholder="Notes" formControlName="notes" autoGrow="true"> </ion-textarea>
         </ion-row>
-      </Form>
+      </form>
     }
-  </div>
-  <div class="save">
-    <div class="save-inner-container">
-      <ion-row class="sleep-time">
-        <ion-button (click)="save()"> Save </ion-button>
-      </ion-row>
-    </div>
   </div>
 </div>
