--- a/src/app/baby-tracking/pages/dashboard/content/food-tracking/food-tracking.component.scss
+++ b/src/app/baby-tracking/pages/dashboard/content/food-tracking/food-tracking.component.scss
@@ -1,86 +1,129 @@
-.container {
-  /* Some container-specific styles here */
+.food-tracking-container {
   font-family: 'poppins';
-  padding: 0 10px 0 10px;
-  position: relative;
+  letter-spacing: 1.5px;
 
   .header {
-    margin: 20px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    align-content: center;
-    justify-content: center;
+
+    .back-icon {
+      font-size: 24px;
+      cursor: pointer;
+    }
+
+    .header-text {
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .save {
+      ion-button {
+        font-size: 14px;
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
+    }
   }
 
-  ion-input {
-    border: 1px solid #b8926a;
-    border-radius: 24px;
-    padding: 0 10px !important;
-  }
+  .inner-container {
+    hr {
+      border-top: 1px solid #333;
+      margin: 10px 0;
+    }
 
-  .input-row {
-    width: 100%;
-    margin: 10px 0;
-  }
+    ion-toolbar {
+      --background: none;
+    }
 
-  ion-segment {
-    width: 100%;
-    margin-bottom: 20px;
-  }
+    ion-segment {
+      width: 100%;
+      margin-bottom: 20px;
+    }
 
-  .arrow-left {
-    position: absolute;
-    top: 0;
-    left: 5px;
-    font-size: 24px;
-    font-weight: 200;
-  }
+    .food-time {
+      width: 100%;
+      display: flex;
+      justify-content: center;
 
-  hr {
-    border-top: 1px solid #333;
-    margin: 20px 0;
-  }
+      .header-text {
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
 
-  .sleep-time {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+      ion-button::part(native) {
+        border-radius: 12px;
+        background-color: rgba(227, 34, 69);
+      }
 
-  .timer {
-    position: absolute;
-    top: 240px;
-    left: 0;
-  }
+      ion-button {
+        width: 100%;
+        margin: 5px 0 5px 0;
+      }
+    }
 
-  ion-button::part(native) {
-    border-radius: 12px;
-    background-color: #b8926a;
-  }
+    .timer-container {
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      left: 0;
+      .time {
+        font-size: 20px;
+      }
+    }
 
-  ion-button {
-    width: 100%;
-    margin: 5px 0 5px 0;
-  }
+    .tracking-button-row {
+      margin-top: 70px;
+      display: flex;
+      justify-content: center;
+    }
 
-  .sleep-button-row {
-    margin-top: 100px;
-    display: flex;
-    justify-content: center;
-  }
+    .reset-container {
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      text-align: center;
 
-  .times {
-    font-size: 20px;
-  }
+      ion-button {
+        width: 100px;
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
 
-  .save {
-    bottom: 10px;
-    left: 0;
-    position: fixed;
-    width: 100%;
-  }
+      ion-button::part(native) {
+        border-radius: 24px;
+      }
+    }
 
-  .save-inner-container {
-    margin: 0 10px;
+    .form-container {
+      margin-top: 15px;
+
+      ion-list {
+        margin-bottom: 10px;
+      }
+
+      .notes-container {
+        width: 100%;
+
+        ion-textarea {
+          border-radius: 24px;
+          padding: 0 10px !important;
+          color: white;
+          border: none;
+          background-color: rgba(170, 170, 170);
+        }
+      }
+
+      ion-item::part(native) {
+        padding-left: 0;
+      }
+
+      ion-item {
+        --inner-padding-end: 0;
+      }
+    }
   }
 }
