--- a/src/app/baby-tracking/pages/dashboard/content/pumping-tracking/pumping-tracking.component.scss
+++ b/src/app/baby-tracking/pages/dashboard/content/pumping-tracking/pumping-tracking.component.scss
@@ -19,139 +19,146 @@
 
     .save {
       ion-button {
+        font-size: 14px;
         font-family: 'poppins';
         letter-spacing: 1.5px;
       }
     }
   }
 
-  hr {
-    border-top: 1px solid #333;
-    margin: 10px 0;
-  }
-
-  ion-segment {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  ion-input {
-    border: 1px solid #b8926a;
-    border-radius: 24px;
-    padding: 0 10px !important;
-  }
-
-  .pump-time {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-
-    .header-text {
-      font-family: 'poppins';
-      letter-spacing: 1.5px;
+  .inner-container {
+    hr {
+      border-top: 1px solid #333;
+      margin: 10px 0;
     }
 
-    ion-button::part(native) {
-      border-radius: 12px;
-      background-color: rgba(227, 34, 69);
+    ion-toolbar {
+      --background: none;
     }
 
-    ion-button {
+    ion-segment {
       width: 100%;
-      margin: 5px 0 5px 0;
-    }
-  }
-
-  .timer-container {
-    margin-top: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: 0;
-    .time {
-      font-size: 20px;
-    }
-  }
-
-  .pump-button-row {
-    margin-top: 70px;
-    display: flex;
-    justify-content: center;
-  }
-
-  .pump-details-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-
-    ion-button {
-      width: 100px;
-      font-family: 'poppins';
-      letter-spacing: 1.5px;
+      margin-bottom: 20px;
     }
 
-    ion-button::part(native) {
-      border-radius: 24px;
-    }
-  }
-
-  .total-segment-container {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-  .notes-container {
-    margin-top: 10px;
-    width: 100%;
-
-    ion-textarea {
+    ion-input {
+      border: 1px solid #b8926a;
       border-radius: 24px;
       padding: 0 10px !important;
-      color: white;
-      border: none;
-      background-color: rgba(170, 170, 170);
     }
-  }
 
-  ion-range::part(tick) {
-    background: lightgray;
-  }
+    .pump-time {
+      width: 100%;
+      display: flex;
+      justify-content: center;
 
-  ion-range::part(tick-active) {
-    background: #85abb3;
-  }
+      .header-text {
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
 
-  ion-range::part(pin) {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background: lightgray;
-    color: #fff;
-    border-radius: 50%;
-    transform: scale(1.01);
-    top: -20px;
-    min-width: 28px;
-    height: 28px;
-    transition:
-      transform 120ms ease,
-      background 120ms ease;
-  }
+      ion-button::part(native) {
+        border-radius: 12px;
+        background-color: rgba(227, 34, 69);
+      }
 
-  ion-range::part(pin)::before {
-    content: none;
-  }
+      ion-button {
+        width: 100%;
+        margin: 5px 0 5px 0;
+      }
+    }
 
-  ion-range::part(knob) {
-    background: #85abb3;
-  }
+    .timer-container {
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      left: 0;
+      .time {
+        font-size: 20px;
+      }
+    }
 
-  ion-range::part(bar) {
-    background: lightgray;
-  }
+    .pump-button-row {
+      margin-top: 70px;
+      display: flex;
+      justify-content: center;
+    }
 
-  ion-range::part(bar-active) {
-    background: #85abb3;
+    .pump-details-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+
+      ion-button {
+        width: 100px;
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
+
+      ion-button::part(native) {
+        border-radius: 24px;
+      }
+    }
+
+    .total-segment-container {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+
+    .notes-container {
+      margin-top: 10px;
+      width: 100%;
+
+      ion-textarea {
+        border-radius: 24px;
+        padding: 0 10px !important;
+        color: white;
+        border: none;
+        background-color: rgba(170, 170, 170);
+      }
+    }
+
+    ion-range::part(tick) {
+      background: lightgray;
+    }
+
+    ion-range::part(tick-active) {
+      background: #85abb3;
+    }
+
+    ion-range::part(pin) {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: lightgray;
+      color: #fff;
+      border-radius: 50%;
+      transform: scale(1.01);
+      top: -20px;
+      min-width: 28px;
+      height: 28px;
+      transition:
+        transform 120ms ease,
+        background 120ms ease;
+    }
+
+    ion-range::part(pin)::before {
+      content: none;
+    }
+
+    ion-range::part(knob) {
+      background: #85abb3;
+    }
+
+    ion-range::part(bar) {
+      background: lightgray;
+    }
+
+    ion-range::part(bar-active) {
+      background: #85abb3;
+    }
   }
 }
