--- a/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.scss
+++ b/src/app/baby-tracking/pages/dashboard/content/solids-tracking/solids-tracking.component.scss
@@ -1,73 +1,105 @@
-.container {
-  /* Some container-specific styles here */
+.solids-container {
   font-family: 'poppins';
-  padding: 0 10px 0 10px;
-  position: relative;
+  letter-spacing: 1.5px;
 
   .header {
-    margin: 20px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    align-content: center;
-    justify-content: center;
+
+    .back-icon {
+      font-size: 24px;
+      cursor: pointer;
+    }
+
+    .header-text {
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .save {
+      ion-button {
+        font-size: 14px;
+        font-family: 'poppins';
+        letter-spacing: 1.5px;
+      }
+    }
   }
 
-  .arrow-left {
-    position: absolute;
-    top: 0;
-    left: 5px;
-    font-size: 24px;
-    font-weight: 200;
-  }
+  .inner-container {
+    hr {
+      border-top: 1px solid #333;
+      margin: 10px 0;
+    }
 
-  hr {
-    border-top: 1px solid #333;
-    margin: 20px 0;
-  }
+    ion-segment {
+      width: 100%;
+      margin-bottom: 20px;
+    }
 
-  .sleep-time {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+    .solids-time {
+      width: 100%;
+      display: flex;
+      justify-content: center;
 
-  ion-input {
-    border: 1px solid #b8926a;
-    border-radius: 24px;
-    padding: 0 10px !important;
-  }
+      .header-text {
+        font-family: 'Poppins';
+        letter-spacing: 1.5px;
+      }
 
-  .input-row {
-    width: 100%;
-    margin: 10px 0;
-  }
+      ion-button::part(native) {
+        border-radius: 12px;
+        background-color: rgba(227, 34, 69);
+      }
 
-  ion-item {
-    width: 100%;
-  }
+      ion-button {
+        width: 100%;
+        margin: 5px 0;
+      }
+    }
 
-  ion-row {
-    margin: 10px 0 10px 0;
-  }
+    .form-container {
+      margin-top: 15px;
 
-  ion-button::part(native) {
-    border-radius: 12px;
-    background-color: #b8926a;
-  }
+      ion-list {
+        margin-bottom: 10px;
 
-  ion-button {
-    width: 100%;
-    margin: 5px 0 5px 0;
-  }
+        ion-select {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
 
-  .save {
-    bottom: 10px;
-    left: 0;
-    position: fixed;
-    width: 100%;
-  }
+        .selected-values {
+          margin-top: 5px;
+          .selected-item {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 14px;
+            color: var(--ion-color-primary);
+          }
+        }
+      }
 
-  .save-inner-container {
-    margin: 0 10px;
+      .notes-container {
+        width: 100%;
+
+        ion-textarea {
+          border-radius: 24px;
+          padding: 0 10px !important;
+          color: white;
+          border: none;
+          background-color: rgba(170, 170, 170);
+        }
+      }
+
+      ion-item::part(native) {
+        padding-left: 0;
+      }
+
+      ion-item {
+        --inner-padding-end: 0;
+      }
+    }
   }
 }
