--- a/src/app/standalone/landing-page/landing-page.component.html
+++ b/src/app/standalone/landing-page/landing-page.component.html
@@ -4,17 +4,18 @@
 
     <div class="profile-image-row">
       <ion-row>
-        <div class="profile-image-container" style="cursor: pointer">
-          <ion-img *ngIf="!selectedProfileImage" [src]="defaultProfileImage" alt="Camera Icon" class="default-profile-image"></ion-img>
-          <ion-img *ngIf="selectedProfileImage" [src]="selectedProfileImage" alt="Selected image" class="selected-profile-image"></ion-img>
-          <input id="fileInput" type="file" accept="image/*" style="display: none" />
+        <div class="profile-image-container">
+          <ion-img *ngIf="!childProfile.profileImage; else selectedImage" [src]="defaultProfileImage" alt="Camera Icon" class="default-profile-image"></ion-img>
+          <ng-template #selectedImage>
+            <ion-img [src]="childProfile.profileImage" alt="Selected image" class="selected-profile-image"></ion-img>
+          </ng-template>
         </div>
       </ion-row>
     </div>
 
     <div class="inner-details">
       <ion-row class="gender-row">
-        <ion-segment value="default">
+        <ion-segment value="{{ childProfile.gender }}">
           <ion-segment-button value="female">
             <div class="inner-segment-container">
               <ion-icon src="assets/Girl_Color_Icon.svg" alt="girl image-icon"></ion-icon>
@@ -36,7 +37,7 @@
         </ion-col>
         <ion-col class="slide-description-col" size="9">
           <ion-row>
-            <h1>Lilly is 4 months old</h1>
+            <h1>{{ childProfile.name }} is {{ getFormattedAge(childProfile.birthDate) }} old</h1>
           </ion-row>
         </ion-col>
       </ion-row>
@@ -47,7 +48,7 @@
         </ion-col>
         <ion-col class="slide-description-col" size="9">
           <ion-row>
-            <h1>4 Activities completed</h1>
+            <h1>{{ childProfile.activityCount }} Activities completed</h1>
           </ion-row>
         </ion-col>
       </ion-row>
